# opengl-immediate-ECS-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  testas
glad/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
glad/include/glad/: gl.h
glad/src/: gl.c
include/: Clock.hpp  Cube.hpp  Face.hpp  GameHost.hpp  GameObject.hpp  RGBAC.hpp  Renderer.hpp  RendererConfig.hpp  Scene.hpp  Sphere.hpp  Vec3.hpp  WindowConfig.hpp
shaders/: triangle.vert
src/: Clock.cpp  Common.cpp  Cube.cpp  GameHost.cpp  GameObject.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  depr.cpp  main.cpp  shaderload.cpp  shaderload.h  utils.cpp  utils.h
